[package]
name = "upwd-lib"
version = "0.1.0"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
num-bigint = "0.3"
num-traits = "0.2"
indexmap = { version = "1.6", features = ["serde-1"] }