[package]
name = "upwd-lib"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "Library for generating passwords"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
indexmap = "1.6"